website/versioned_docs/version-5.0.0/components/Skeleton.mdx
---
id: skeleton
title: Skeleton
---

import { IconsStyle } from "@site/src/components/Docs_Icons";
import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";
import CodeBlock from "@theme/CodeBlock";
import { BiInfoCircle } from "react-icons/bi";

<IconsStyle />

<div class="row inline-flex-center">
  <div class="col col--3">
    <h4>Import</h4>
  </div>
  <div class="col col--9">
    <CodeBlock>{`import { Skeleton } from '@rn-vui/themed';`}</CodeBlock>
  </div>
  <div class="col col--3">
    <h4>
      Theme Key{" "}
      <a href="../customizing#using-themeprovider">
        <BiInfoCircle />
      </a>
    </h4>
  </div>
  <div class="col col--9">
    <CodeBlock>{`Skeleton`}</CodeBlock>
  </div>
</div>

## Usage

## Props

:::note
Includes all [View](https://reactnative.dev/docs/view#props) props.
:::

<div class='table-responsive'>

| Name                      | Type                            | Default | Description                          |
| ------------------------- | ------------------------------- | ------- | ------------------------------------ |
| `LinearGradientComponent` | `React Component`               | ``      | `Custom Linear Gradient Component`   |
| `animation`               | `` none` \| `pulse` \| `wave `` | `pulse` | `Type of animation`                  |
| `circle`                  | `boolean`                       | ``      | `show circular variant`              |
| `height`                  | `DimensionValue`                | `12`    | `Height of Skeleton View`            |
| `skeletonStyle`           | `View Style`                    | ``      | `Custom style for skeleton gradient` |
| `width`                   | `DimensionValue`                | `100%`  | `Width of Skeleton View`             |

</div>
